# legoland

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DECOMPILING.md  HEADERS.md  README.md  a99212db  a99212sy  a99248ex  a99248gl  a99248in  pyproject.toml  reccmp-project.yml  setup.py
.claude/agents/: decomp-match.md
.github/workflows/: build.yml
cmake/: msvc6-toolchain.cmake
cmake/wrappers/: cl  link
data/: crt.csv
docs/: decomp-tips.md  title-screen-port.md
src/legoland/: balloonz.c  balloonz.h  binv.c  binv.h  bloke.c  bloke.h  bloke_ai.c  bloke_ai.h  boating_school.c  boating_school.h  bootstrap.c  bricks.c  bricks.h  build.c  build.h  carousel.c  carousel.h  castle.c  castle.h  castle_level.c  castle_level.h  catapult.c  catapult.h  cdcheck.c  cdcheck.h  certificate.c  certificate.h  challenge.c  challenge.h  clipping.c  clipping.h  controller.c  controller.h  copters.c  copters.h  crt.c  crt.h  debug.c  debug.h  debug_alloc.c  (+165 more)
tools/: allowlist.py  defmap.py  find-casts  needsdecl.py  overlap.py  progress.py  report.py  sort_globals.py  verify  wibo.patch  wine  winepath
